force-app/main/default/objects/HAM_Reported_Content__c/HAM_Reported_Content__c.object-meta.xml
<CustomObject>
    <label>HAM Reported Content</label>
    <nameField>
        <displayFormat>REP-{0000}</displayFormat>
        <label>HAM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAM Reported Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>