force-app/main/default/objects/HAM_Reported_Content__c/fields/Is_User_Report__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is User Report</label>
    <type>Checkbox</type>
</CustomField>