force-app/main/default/objects/HAM_Reported_Content__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inappropriate Message</fullName>
            </value>
            <value>
                <fullName>Aggressive Tone</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Bad Behavior (In Group)</fullName>
            </value>
            <value>
                <fullName>Bad Behavior (Outside Group)</fullName>
            </value>
            <value>
                <fullName>Harassment</fullName>
            </value>
            <value>
                <fullName>Bullying</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Inappropriate Tone</fullName>
                <isActive>false</isActive>
                <label>Inappropriate Tone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>