force-app/main/default/objects/HAM_Reported_Content__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reports Filed</relationshipLabel>
    <relationshipName>HAM_Reports_Filed</relationshipName>
    <type>Lookup</type>
</CustomField>