force-app/main/default/objects/HAM_Reported_Content__c/fields/Reported_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reported_Comment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported Comment</label>
    <referenceTo>HAM_Group_Comment__c</referenceTo>
    <relationshipLabel>HAM Reported Contents</relationshipLabel>
    <relationshipName>HAM_Reported_Contents</relationshipName>
    <type>Lookup</type>
</CustomField>