force-app/main/default/objects/HAM_Reported_Content__c/fields/Reported_User__c.field-meta.xml
<CustomField>
    <fullName>Reported_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reports Against</relationshipLabel>
    <relationshipName>HAM_Reports_Against</relationshipName>
    <type>Lookup</type>
</CustomField>